# laziergit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  diff.rs  field.rs  git.rs  input.rs  layout.rs  main.rs  mouse.rs  nav.rs  status.rs  task.rs  theme.rs  tree.rs
src/ui/: chrome.rs  diff.rs  mod.rs  sidebar.rs
